# Greyfield

./: .gitignore  AGENTS.md  CLAUDE.md  GrayWind Personal Assistant.md  MAP.md  README.md  THIRD_PARTY_NOTICES.md  architecture-v2.md  build-desktop.bat  build-dev.bat  conf.example.yaml  conf.yaml  context-runtime.md  gpt.md  gpt设计.md  greywind-implementation-spec.md  greywind-spec-final (1).md  minimal-spine-plan.md  pyproject.toml  spine-now.md  start.bat  start.vbs  出包.bat  开发测试.bat  推进经验.md
.github/workflows/: build.yml
archive/: README.md  greywind-airi-borrowing-strategy.md  remote-chat-realtime-voice-notes.md
characters/: greywind.yaml
data/: memory.json
docs/: INDEX.md  MAP.md  engineering-lessons.md  greywind-implementation-spec.md  spine-now.md  worktree-log.md  worktree-workflow.md
docs/archive/: ai-assistant-architecture.md  greywind-airi-borrowing-strategy.docx
docs/error-books/: _index.md  build-packaging.md  checklist-error-landing.md  common-mistakes.md  flow-code-habit.md  flow-gate.md  flow-rules.md  git-worktree.md  streaming-runtime.md  tool-rules.md
docs/历史文档/: README.md  greywind-spec-final.md  greywind-spec-v2.md  greywind-spec-v3.md  greywind-spec.md  推进经验.md
frontend/desktop/: electron-builder.dev.json  electron-builder.stub.json  main.js  package-lock.json  package.json  preload-history.js  preload-log.js  preload-settings.js  preload.js  runtime-paths.js
src/characters/: greywind.yaml
src/data/: memory.json
tests/: test_strip_think_streaming.py
历史文档/: GrayWind Personal Assistant.md  gpt.md  gpt设计.md  growth-spec-draft.md
(+63 files in other folders)
