[project]
name = "greywind"
version = "0.1.0"
description = "灰风 — 桌面 AI 伴侣"
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "openai",
    "anthropic",
    "chardet",
    "pydantic",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greywind"]
