[project]
name = "greywind"
version = "0.1.0"
description = "灰风 — 桌面 AI 伴侣"
requires-python = ">=3.10"
dependencies = [
    "loguru",
    "openai",
    "anthropic",
    "chardet",
    "pydantic",
    "pyyaml",
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "edge-tts",
    "requests",
    "jinja2",
    "torch>=2.10.0",
    "silero-vad>=6.2.1",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
browser = ["playwright>=1.58.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greywind"]
